# Graphics-I-Phong-Renderer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
res/shaders/: sphere.glsl  woman.glsl
src/: Main.cpp  Sphere.cpp  Sphere.h  core.h  main.cpp
src/ogl/: Camera.cpp  Camera.h  Core.cpp  Core.h  ElementBuffer.cpp  ElementBuffer.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
